--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
         "prettier": "^2.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
+        "react-textarea-autosize": "^8.3.4",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
