add mongoDB and express, made sessions

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
     "name": "client",
     "version": "0.1.0",
+    "homepage": "https://yuliya-d98.github.io/group-chat",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
@@ -10,6 +11,8 @@
         "@types/node": "^16.11.62",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "axios": "^1.0.0",
+        "dotenv-cli": "^6.0.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.5.1",
         "eslint-plugin-import": "^2.26.0",
@@ -22,12 +25,16 @@
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
         "react-textarea-autosize": "^8.3.4",
+        "socket.io-client": "^4.5.2",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "dotenv -e .env.development react-scripts start",
+        "build:dev": "dotenv -e .env.development react-scripts build",
+        "build:prod": "dotenv -e .env.production react-scripts build",
+        "predeploy": "npm run build:prod",
+        "deploy": "gh-pages -d build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
