--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,12 @@
         "@socket.io/mongo-adapter": "^0.2.1",
         "body-parser": "^1.20.0",
         "connect-mongo": "^4.6.0",
-        "connect-redis": "^6.1.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "mongodb": "^4.10.0",
-        "redis": "^4.3.1",
         "socket.io": "^4.5.2"
     },
     "devDependencies": {
