--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,12 @@
         "prettier": "^2.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.4",
         "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
         "react-textarea-autosize": "^8.3.4",
+        "redux": "^4.2.0",
+        "redux-thunk": "^2.4.1",
         "socket.io-client": "^4.5.2",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
