--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "mongodb": "^4.10.0",
+        "mongoose": "^6.7.0",
         "socket.io": "^4.5.2"
     },
     "devDependencies": {
